// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List 🚏 ProList support rowClassName as a function 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-list ant-list-split ant-pro-list-container"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <ul
                class="ant-list-items"
              >
                <li
                  class="ant-list-item ant-pro-list-row even"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <div
                            class="ant-pro-list-row-header-title"
                          >
                            <div
                              class="ant-pro-list-row-title"
                            >
                              我是名称
                            </div>
                          </div>
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <div
                            class="ant-pro-list-row-description"
                          >
                            desc text
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="ant-list-item ant-pro-list-row odd"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <div
                            class="ant-pro-list-row-header-title"
                          >
                            <div
                              class="ant-pro-list-row-title"
                            >
                              我是名称
                            </div>
                          </div>
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <div
                            class="ant-pro-list-row-description"
                          >
                            desc text
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 ProList support rowClassName as a string 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-list ant-list-split ant-pro-list-container"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <ul
                class="ant-list-items"
              >
                <li
                  class="ant-list-item ant-pro-list-row rowClassName"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <div
                            class="ant-pro-list-row-header-title"
                          >
                            <div
                              class="ant-pro-list-row-title"
                            >
                              我是名称
                            </div>
                          </div>
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <div
                            class="ant-pro-list-row-description"
                          >
                            desc text
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has content 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-list ant-list-split ant-pro-list-container"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <ul
                class="ant-list-items"
              >
                <li
                  class="ant-list-item ant-pro-list-row"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                  </div>
                  <div
                    class="ant-pro-list-row-content"
                  >
                    <div>
                      段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态提供跨越设计与开发的体验解决方案。
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 only has description 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-list ant-list-split ant-pro-list-container"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <ul
                class="ant-list-items"
              >
                <li
                  class="ant-list-item ant-pro-list-row"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <div
                            class="ant-pro-list-row-description"
                          >
                            <span
                              class="ant-tag"
                            >
                              语雀专栏
                            </span>
                            <span
                              class="ant-tag"
                            >
                              设计语言
                            </span>
                            <span
                              class="ant-tag"
                            >
                              蚂蚁金服
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List 🚏 show loading state 1`] = `
<div
  class="ant-pro"
>
  <div
    class="ant-pro-table ant-pro-list ant-pro-list ant-pro-list-no-split"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-top: 0px;"
      >
        <div
          class="ant-list ant-list-split ant-list-loading ant-pro-list-container"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div>
              <div
                aria-busy="true"
                aria-live="polite"
                class="ant-spin ant-spin-spinning"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </div>
            </div>
            <div
              class="ant-spin-container ant-spin-blur"
            >
              <ul
                class="ant-list-items"
              >
                <li
                  class="ant-list-item ant-pro-list-row"
                >
                  <div
                    class="ant-pro-list-row-header"
                  >
                    <div
                      class="ant-pro-list-row-header-option"
                    />
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <div
                            class="ant-pro-list-row-header-title"
                          >
                            <div
                              class="ant-pro-list-row-title"
                            >
                              我是名称
                            </div>
                          </div>
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          <div
                            class="ant-pro-list-row-description"
                          >
                            desc text
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
